<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:background="@drawable/reviewborder"
    android:orientation="horizontal"
    android:padding="15dp">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/reviewImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/profileborder"
        android:padding="1dp"
        android:src="@drawable/user1" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/reviewerName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reviewer_name" />

        <TextView
            android:id="@+id/reviewTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/review_time" />

        <RatingBar
            android:id="@+id/reviewRating"
            style="@style/Widget.AppCompat.RatingBar.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:numStars="5"
            android:rating="5" />

        <TextView
            android:id="@+id/reviewContent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/review_main" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/chuchon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/good_review"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/chuchonCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/good_review_count"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/reviewWalls"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/walls" />

            <TextView
                android:id="@+id/reviewWarning"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/warning" />

            <RatingBar
                android:id="@+id/review_rating2"
                style="@style/Widget.AppCompat.RatingBar.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:numStars="5"
                android:rating="4.5"
                android:visibility="invisible" />

        </LinearLayout>

    </LinearLayout>


</LinearLayout>